--- a/TrabalhoPraticoQualidadeDeSoftware/.settings/org.eclipse.wst.common.component
+++ b/TrabalhoPraticoQualidadeDeSoftware/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="TrabalhoPraticoQualidadeDeSoftware">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/test"/>
         <property name="context-root" value="TrabalhoPraticoQualidadeDeSoftware"/>
         <property name="java-output-path" value="/TrabalhoPraticoQualidadeDeSoftware/bin"/>
     </wb-module>
